@@ -12,6 +12,7 @@ Version 6.7 - not yet released
 * map
   - terrain countour lines (#2451)
   - continue loading terrain/topography without GPS fix (#2723)
+  - suppress drawing duplicate topography labels
 * infoboxes
   - new content "Speed task last hour"
   - new content "Next distance (nominal)"
